<resources>
    <string name="app_name">LegworkWrit</string>
    <string name="choose_write_instrument">选择填写文书</string>
    <string name="live_check_record">现场检查笔录（路检）</string>
    <string name="live_check_record2">现场检查笔录</string>
    <string name="register_notice">先行登记通知书</string>
    <string name="detain_car_form">扣押车辆交接单</string>
    <string name="live_transcript">现场笔录</string>
    <string name="talk_notice">谈话通知书</string>
    <string name="correct_notice">责令（限期）改正通知书</string>
    <string name="detain_car_decide">扣押车辆决定书</string>
    <string name="administrative_decide">行政处罚决定书</string>
    <string name="driver_and_car_info">车主及车辆信息</string>
    <string name="driver_name">车主姓名</string>
    <string name="driver_name_hint">请输入车主姓名</string>
    <string name="car_license">车&#160;&#160;牌&#160;&#160;号</string>
    <string name="car_license_hint">请输入车牌号</string>
    <string name="car_color">车身颜色</string>
    <string name="car_color_hint">请输入车身颜色</string>
    <string name="car_model">车&#8195;&#8195;型</string>
    <string name="car_model_hint">请输入车型</string>
    <string name="brand_model">厂牌型号</string>
    <string name="brand_model_hint">请输入厂牌型号</string>
    <string name="frame_number">车&#160;&#160;架&#160;&#160;号</string>
    <string name="frame_number_hint">请输入车架号</string>
    <string name="kilometers">车公里数</string>
    <string name="kilometers_hint">请输入车公里数</string>
    <string name="detain_material_number">查扣物品数量</string>
    <string name="top_light">顶&#8195;&#8195;灯</string>
    <string name="please_choose_number">请选择数量</string>
    <string name="price_meter">计&#160;&#160;价&#160;&#160;器</string>
    <string name="empty_ticket">空&#160;&#160;车&#160;&#160;票</string>
    <string name="false_certificate">假&#160;&#160;证&#160;&#160;件</string>
    <string name="bill">票&#8195;&#8195;据</string>
    <string name="personal_belong">私人物品</string>
    <string name="personal_belong_hint">请输入私人物品</string>
    <string name="accord_rule">依据条例</string>
    <string name="accord_rule_hint">下拉选择条例</string>
    <string name="preview">预览</string>
    <string name="sign">签字</string>
    <string name="save">保存</string>
    <string name="check_seize_info">查扣信息</string>
    <string name="deduction_time">扣车时间</string>
    <string name="deduction_time_hint">请输入扣车时间</string>
    <string name="deduction_address">扣车地址</string>
    <string name="deduction_address_hint">请输入扣车地址</string>
    <string name="storage_car_park">存放车辆停车场</string>
    <string name="storage_car_park_hint">请选择停车场</string>
    <string name="escort_time">押送时间</string>
    <string name="escort_time_hint">请输入押送时间</string>
    <string name="car_retain_photo">车辆留存照片</string>
    <string name="four_corner_photo">四角照片</string>
    <string name="car_front_photo">车辆前侧</string>
    <string name="car_after_photo">车辆后侧</string>
    <string name="car_left_photo">车辆左侧</string>
    <string name="car_right_photo">车辆右侧</string>
    <string name="car_kilometers">车辆里程数</string>
    <string name="car_kilometers_photo">车辆里程数照片</string>
    <string name="car_frame_number">车架号</string>
    <string name="car_frame_number_photo">车架号照片</string>
    <string name="litigant">当&#160;&#160;事&#160;&#160;人</string>
    <string name="litigante_hint">请输入当事人姓名</string>
    <string name="agency_address">机关地址</string>
    <string name="agency_address_hint">请选择机关地址</string>
    <string name="agency_phone">机关电话</string>
    <string name="agency_phone_hint">请选择机关电话</string>
    <string name="illegal">涉嫌违法事由</string>
    <string name="please_input_litigant">请输入当事人</string>
    <string name="please_input_litigant_address">请输入当事人地址</string>
    <string name="litigant_address">当事人地址</string>
    <string name="instrument_fill_time">文书填写时间</string>
    <string name="instrument_fill_time_hint">请选择文书填写时间</string>
    <string name="frist_register_address">先登地址&#8195;</string>
    <string name="frist_register_address_hint">请输入先登地址</string>
    <string name="save_way">保存方式&#8195;</string>
    <string name="car_info">车辆信息&#8195;</string>
    <string name="car_info2">车辆信息2&#8195;</string>
    <string name="car_info_hint">请选择车辆信息填写</string>
    <string name="please_input_car_number">请输入车号及车架号</string>
    <string name="credentials_info">证件及车辆信息</string>
    <string name="credentials_info_hint">请选择车辆、证件信息填写</string>
    <string name="please_input_certificate_number">请输入从业资格证号</string>
    <string name="car_owner">车辆所有人</string>
    <string name="please_input_car_owner">请输入车辆所有人</string>
    <string name="please_input_car_license">请输入车牌号码</string>
    <string name="please_input_car_cjh">请输入车架号</string>
    <string name="please_input_car_color">请输入车辆颜色</string>
    <string name="please_input_car_brand">请输入车辆品牌</string>
    <string name="please_input_car_model">请输入车辆型号</string>
    <string name="please_input_car_cardID">请输入车辆证号</string>
    <string name="please_input_card_cyzgz">请输入从业资格证</string>
    <string name="please_input_card_driver">请输入网络预约出租汽车驾驶员证</string>
    <string name="please_input_card_service">请输入服务监督卡</string>
    <string name="please_input_card_transport">请输入道路运输证</string>
    <string name="please_input_card_flag">请输入客运标志牌</string>
    <string name="please_input_other">请输入其他信息</string>
    <string name="please_input_car_no">请输入车辆编号</string>
    <string name="car_model_title">车辆型号</string>
    <string name="car_card">车辆证号</string>
    <string name="car_no">车辆编号</string>
    <string name="car_number">车牌号码</string>
    <string name="certificate_number">从业资格证</string>
    <string name="card_driver">网约车驾驶证</string>
    <string name="card_service">服务监督卡</string>
    <string name="card_transport">道路运输证</string>
    <string name="card_flag">客运标志牌</string>
    <string name="card_other">其他</string>
    <string name="park">停&#160;&#160;车&#160;&#160;场&#8195;</string>
    <string name="park_hint">请选择停车场</string>
    <string name="this_agency_address">本机关地址</string>
    <string name="this_agency_address_hint">请选择本机关地址</string>
    <string name="this_agency_phone">本机关电话</string>
    <string name="note">备&#160;&#160;注</string>
    <string name="this_agency_phone_hint">请选择本机关电话</string>
    <string name="note_hint">&#8195;&#8195;请输入备注信息（选填）</string>
    <string name="send_litigant">直接送达当事人</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="tip">提示</string>
    <string name="instrument_send_time">文书送达时间</string>
    <string name="instrument_send_time_hint">请选择文书送达时间</string>
    <string name="litigant_with_holder">当&#160;&#160;事&#160;&#160;人&#8195;</string>
    <string name="car_frame_number_with_holder">车&#160;&#160;架&#160;&#160;号</string>
    <string name="car_frame_number_hint">请输入车架号</string>
    <string name="goods_hint_default">0</string>
    <string name="choose_write">选择填写</string>
    <string name="choose_write_hint">选择填写卡号</string>
    <string name="input_supervision_hint">请输入服务监督卡号</string>
    <string name="input_driving_license_hint">请输入出租汽车驾驶员证号</string>
    <string name="carry_out_time">实施时间</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="please_choose_start_time">请选择开始时间</string>
    <string name="please_choose_end_time">请选择结束时间</string>
    <string name="carry_out_address">实施地点</string>
    <string name="carry_out_address_hint">请输入实施地点</string>
    <string name="has_witness">有见证人</string>
    <string name="arrival_person">到场人员</string>
    <string name="arrival_person_hint">请输入到场人员</string>
    <string name="gender">性&#8195;&#8195;别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="phone">电&#8195;&#8195;话</string>
    <string name="phone_hint">请输入电话</string>
    <string name="id_card">身份证号</string>
    <string name="id_card_hint">请输入身份证号</string>
    <string name="arrival_person_address">到场人员地址</string>
    <string name="arrival_person_address_hint">请输入地址</string>
    <string name="force_step">强制措施</string>
    <string name="read_documents">宣读文书</string>
    <string name="other">其他</string>
    <string name="documents">扣押车辆决定书</string>
    <string name="small_car">小型轿车</string>
    <string name="please_input_force_step_content">请输入强制措施记录内容</string>
    <string name="check_time">检查时间</string>
    <string name="check_area">检查区域</string>
    <string name="check_area_hint">请选择检查区域</string>
    <string name="check_case">检查案件</string>
    <string name="check_case_hint">请输入案件来源</string>
    <string name="input_step_hint">请输入措施</string>
    <string name="check_address">检查地点</string>
    <string name="check_address_hint">请选择检查地点</string>
    <string name="current_time">当前时间</string>
    <string name="inspected_person">被检查人</string>
    <string name="inspected_person_hint">请输入被检查人姓名</string>
    <string name="card_number">证件号码</string>
    <string name="card">身份证</string>
    <string name="inspected_person_address">被检查人地址</string>
    <string name="inspected_person_address_hint">请输入被检查人地址</string>
    <string name="car_brand">车辆品牌</string>
    <string name="car_brand_hint">请选择车辆品牌</string>
    <string name="vehicle_color">车辆颜色</string>
    <string name="vehicle_color_hint">请输入车辆颜色</string>
    <string name="please_input_your_car_model">请输入您的车型</string>
    <string name="illegal_behavior">违法行为</string>
    <string name="illegal_behavior_hint">请选择违法行为</string>
    <string name="illegal_situation">违法情形</string>
    <string name="illegal_situation_hint">请选择违法情形</string>
    <string name="illegal_content">违法内容</string>
    <string name="illegal_content_hint">请选择违法内容</string>
    <string name="illegal_rules">违反条例</string>
    <string name="illegal_rules_hint">请选择违反条例</string>
    <string name="illegal_reasons_hint">请选择违法事由</string>
    <string name="check_content_record">检查内容记录</string>
    <string name="please_input_check_content">请输入检查内容</string>
    <string name="please_input_zfry">请选择执法人员</string>
    <string name="punish_time">处罚时间</string>
    <string name="input_punish_time">请选择处罚时间</string>
    <string name="punish_address">处罚地址</string>
    <string name="input_punish_address">请选择处罚地址</string>
    <string name="input_select_address">请选择地址</string>
    <string name="administrative_punish_decide">行政处罚决定书</string>
    <string name="industry_type">行业类别</string>
    <string name="industry_type_hint">请选择行业类别</string>
    <string name="creation_industry">案件创建</string>
    <string name="inspected">被检查人</string>
    <string name="law_enforcement_personnel">执法人员1</string>
    <string name="law_enforcement_personne2">执法人员2</string>
    <string name="law_enforcement_address">执法地点</string>
    <string name="law_enforcement_district">执法区域</string>
    <string name="creation_time">创建时间</string>
    <string name="punishment_way">处罚方式</string>
    <string name="punishment_way_hint">请选择处罚方式</string>
    <string name="source_case">案件来源</string>
    <string name="inspected_hint">请输入被检查人姓名</string>
    <string name="law_enforcement_address_hint">请填写执法地点</string>
    <string name="inspected_address_hint">请选择被检查人地址</string>
    <string name="law_enforcement_district_hint">请选择执法区域</string>
    <string name="current_position">当前位置</string>
    <string name="select_type">选择方式</string>
    <string name="sure_save">确认保存</string>
    <string name="punish">处罚</string>
    <string name="warning">警告</string>
    <string name="step2">因当事人无法出示合法有效的车辆营运证或其他有效证明，根据《中华人民共和国道路运输条例》第六十二条的规定</string>
    <string name="live_step2">被检查人在场对车辆内饰和外观情况进行了核对确认，并取走车内财物。</string>
    <string name="industry">行&#8195;业</string>
    <string name="license">车牌号</string>
    <string name="time">时&#8195;间</string>
    <string name="industry_hint">请选择行业</string>
    <string name="search">搜索</string>
    <string name="city_abbreviation">京</string>
    <string name="writ_preview">文书预览</string>
    <string name="writ_print">文书打印</string>
    <string name="print">打印</string>
    <string name="writ_print_times">&#8195;(已打印%1$s次)</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
</resources>