<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        style="@style/CommonTitleTextViewStyle"
        android:text="@string/check_seize_info" />

    <LinearLayout style="@style/CommonHorizontalLinearLayoutStyle">

        <TextView
            style="@style/CommonDesTextViewStyle"
            android:text="@string/deduction_time" />

        <TextView
            style="@style/CommonContentTextViewWithDropDownStyle"
            android:drawableEnd="@null"
            android:hint="@string/deduction_time_hint" />

    </LinearLayout>

    <View style="@style/CommonLineStyle" />

    <LinearLayout style="@style/CommonHorizontalLinearLayoutStyle">

        <TextView
            style="@style/CommonDesTextViewStyle"
            android:text="@string/deduction_address" />

        <TextView
            style="@style/CommonContentTextViewWithDropDownStyle"
            android:drawableEnd="@null"
            android:hint="@string/deduction_address_hint" />

    </LinearLayout>

    <View style="@style/CommonLineStyle" />

    <LinearLayout style="@style/CommonHorizontalLinearLayoutStyle">

        <TextView
            style="@style/CommonDesTextViewStyle"
            android:text="@string/escort_time" />

        <TextView
            style="@style/CommonContentTextViewWithDropDownStyle"
            android:drawableEnd="@null"
            android:hint="@string/escort_time_hint" />

    </LinearLayout>

    <View style="@style/CommonLineStyle" />

    <LinearLayout style="@style/CommonHorizontalLinearLayoutStyle">

        <TextView
            style="@style/CommonDesTextViewStyle"
            android:layout_height="wrap_content"
            android:text="@string/storage_car_park" />

        <TextView
            style="@style/CommonContentTextViewWithDropDownStyle"
            android:hint="@string/storage_car_park_hint" />

    </LinearLayout>

</LinearLayout>